React components in example + package.json cleanup

--- a/example/index.html
+++ b/example/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./dist/index.css" />
-        <title>Stopwatch powered by Easytimer React Hook</title>
+        <title>Stopwatch Example powered by Easytimer React Hook</title>
     </head>
     <body>
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <span class="navbar-item has-text-weight-bold"> Easytimer React Hook Example </span>
+                <span class="navbar-item has-text-weight-bold"> Easytimer React Hook </span>
                 <a href="" class="navbar-item"><img class="mr-3" src="./dist/images/github.png" /> Github </a>
             </div>
         </nav>
