--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./dist/index.css" />
+        <link rel="stylesheet" href="./example/dist/index.css" />
         <title>Stopwatch Example powered by Easytimer React Hook</title>
     </head>
     <body>
@@ -48,6 +48,6 @@
             </div>
         </div>
 
-        <script src="./dist/index.js"></script>
+        <script src="./example/dist/index.js"></script>
     </body>
 </html>
