github logo url fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <span class="navbar-item has-text-weight-bold"> Easytimer React Hook </span>
-                <a href="" class="navbar-item"><img class="mr-3" src="./dist/images/github.png" /> Github </a>
+                <a href="" class="navbar-item"><img class="mr-3" src="./example/dist/images/github.png" /> Github </a>
             </div>
         </nav>
 
