--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./example/dist/index.css" />
-        <title>Stopwatch Example powered by Easytimer React Hook</title>
+        <title>Stopwatch Example powered by EasyTimer React Hook</title>
     </head>
     <body>
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <span class="navbar-item has-text-weight-bold"> Easytimer React Hook </span>
-                <a href="" class="navbar-item"><img class="mr-3" src="./example/dist/images/github.png" /> Github </a>
+                <a href="https://github.com/albert-gonzalez/easytimer-react-hook" class="navbar-item"
+                    ><img class="mr-3" src="./example/dist/images/github.png" /> Github
+                </a>
             </div>
         </nav>
 
