description updated + source code section added to example page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         <div class="section">
             <div class="content is-medium">
+                <h3>Technologies</h3>
                 <p>This page uses the following technologies and assets:</p>
                 <ul>
                     <li><a href="https://reactjs.org/">React</a></li>
@@ -38,6 +39,11 @@
                     <li><a href="https://bulma.io/">Bulma</a></li>
                     <li><a href="https://www.1001fonts.com/digital-7-font.html">Digital 7 font</a></li>
                 </ul>
+                <h3>Source Code</h3>
+                <p>
+                    You can check out the source code of this example
+                    <a href="https://github.com/albert-gonzalez/easytimer-react-hook/tree/main/example/src">here</a>
+                </p>
             </div>
         </div>
 
